--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  font-family: "Century Gothic";
+  margin: 0;
+  padding: 0;
 }
 
 /* ol, ul {
